# planner

./: LICENSE  README.md  pyproject.toml
data/: holiday-2023.txt  holiday-2024.txt
planner/: __main__.py  almanac.py  coordinate.py  planner.py  scrape.py
planner/data/conf/: day_of_week.yml
tests/: test_almanac.py  test_coordinate.py  test_scrape.py
tests/data/: 20220201-rekiyoko.html  20230201-rekiyoko.html  rokuyo-2023.txt  rokuyo-2024.txt  rokuyo_2023.html  rokuyo_2024.html
