[tool.poetry]
name = "planner"
version = "0.1.0"
description = "手帳"
license = "MIT"
authors = ["nobituk <nobituk@ab.auone-net.jp>"]
readme = "README.md"
repository = "https://github.com/nobituk/planner"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Environment :: Console",
	"License :: OSI Approved :: MIT License"
]

[tool.poetry.dependencies]
python = "^3.11"
reportlab = "^4.0.7"
pyyaml = "^6.0.1"
beautifulsoup4 = "^4.12.2"
isort = "^5.13.2"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pytest = "^7.4.3"
coverage = "^7.3.2"
grip = "^4.6.2"
flake8 = "^7.0.0"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
